--- a/views/workshops.ejs
+++ b/views/workshops.ejs
@@ -170,16 +170,15 @@
             
         </div>
         </div>
- <script src="https://kit.fontawesome.com/bad7f7f5d4.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/bad7f7f5d4.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
-<!-- partial -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
 <script src="./javascripts/jquery.min.js"></script>
   <script>
     VanillaTilt.init(document.querySelectorAll(".box"), {
 		    max: 15,
         speed: 400,
-        easing:"cubic-bezier(1,1,1,1)",
+        easing:"cubic-bezier(.03,.98,.52,.99)",
         perspective:500,
         transition:true
     });
