--- a/views/competitions.ejs
+++ b/views/competitions.ejs
@@ -70,7 +70,9 @@
 		width: 100vw;
 		background-color: rgb(0, 0, 0);
     }
-    
+  .container{
+    overflow: hidden;
+  }
 
   </style>
 
@@ -185,44 +187,44 @@
       <ul class="navigation-circle__list">
         <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
-              <h3 class="navigation-circle-list-yan__title">Arduino Hackathon
-              </h3>
+              <p class="navigation-circle-list-yan__title">Arduino Hackathon
+              </p>
              
              <!-- <h4 class="navigation-circle-list-yan__subtitle">It just goes round and round</h4>-->
             </div></a></li>
         <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
-              <h3 class="navigation-circle-list-yan__title">CAD Component
-              </h3>
+              <p class="navigation-circle-list-yan__title">CAD Component
+              </p>
             </div></a></li>
          <!--  <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
-              <h3 class="navigation-circle-list-yan__title">Item #3
-              </h3>
+              <p class="navigation-circle-list-yan__title">Item #3
+              </p>
               <h4 class="navigation-circle-list-yan__subtitle">It just goes round and round</h4>
             </div></a></li>
         <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(4)" onmouseenter="calculateOffset(4)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
-              <h3 class="navigation-circle-list-yan__title">Item #4
-              </h3>
+              <p class="navigation-circle-list-yan__title">Item #4
+              </p>
               <h4 class="navigation-circle-list-yan__subtitle">It just goes round and round</h4>
             </div></a></li>
      <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(5)" onmouseenter="calculateOffset(5)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
-              <h3 class="navigation-circle-list-yan__title">Item #5
-              </h3>
+              <p class="navigation-circle-list-yan__title">Item #5
+              </p>
               <h4 class="navigation-circle-list-yan__subtitle">It just goes round and round</h4>
             </div></a></li>
         <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(6)" onmouseenter="calculateOffset(6)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
-              <h3 class="navigation-circle-list-yan__title">Item #6
-              </h3>
+              <p class="navigation-circle-list-yan__title">Item #6
+              </p>
               <h4 class="navigation-circle-list-yan__subtitle">It just goes round and round</h4>
             </div></a></li>
         <li class="navigation-circle-list-yan"><a  href ="https://wissenaire.org/"class="navigation-circle-list-yan__point" onclick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
-              <h3 class="navigation-circle-list-yan__title">Item #7
-              </h3>
+              <p class="navigation-circle-list-yan__title">Item #7
+              </p>
               <h4 class="navigation-circle-list-yan__subtitle">It just goes round and round</h4>
             </div></a></li> -->
       </ul>
@@ -267,20 +269,20 @@
         
         <li class="navigation-circle-list-mat"><a href='https://wissenaire.org/ml' class="navigation-circle-list-mat__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-mat__meta">
-              <h3 class="navigation-circle-list-mat__title">ML
-              </h3>
+              <p class="navigation-circle-list-mat__title">ML
+              </p>
             </div></a></li>
         
         <li class="navigation-circle-list-mat"><a href="https://wissenaire.org/countercypher" class="navigation-circle-list-mat__point" onclick="onClick(5)" onmouseenter="calculateOffset(5)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-mat__meta">
-              <h3 class="navigation-circle-list-mat__title">Counter Cypher
-              </h3>
+              <p class="navigation-circle-list-mat__title">Counter Cypher
+              </p>
             </div></a></li>
         
       <!--  <li class="navigation-circle-list-mat"><a  href ="https://wissenaire.org/"class="navigation-circle-list-mat__point" onclick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-mat__meta">
-              <h3 class="navigation-circle-list-mat__title">Item #7
-              </h3>
+              <p class="navigation-circle-list-mat__title">Item #7
+              </p>
               <h4 class="navigation-circle-list-mat__subtitle">It just goes round and round</h4>
             </div></a></li> -->
       </ul>
@@ -324,24 +326,24 @@
       <ul class="navigation-circle__list">
         <li class="navigation-circle-list-col"><a href="https://wissenaire.org/colloquiace" class="navigation-circle-list-col__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-col__meta">
-              <h3 class="navigation-circle-list-col__title">Civil
-              </h3>
+              <p class="navigation-circle-list-col__title">Civil
+              </p>
             </div></a></li>
         <li class="navigation-circle-list-col"><a href="https://wissenaire.org/colloquiame" class="navigation-circle-list-col__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-col__meta">
-              <h3 class="navigation-circle-list-col__title">Mechanical
-              </h3>
+              <p class="navigation-circle-list-col__title">Mechanical
+              </p>
             </div></a></li>
         <li class="navigation-circle-list-col"><a href="https://wissenaire.org/colloquiacs" class="navigation-circle-list-col__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-col__meta">
-              <h3 class="navigation-circle-list-col__title"> Computer Science
-              </h3>
+              <p class="navigation-circle-list-col__title"> Computer Science
+              </p>
             </div></a></li>
       
         <li class="navigation-circle-list-col"><a  href ="https://wissenaire.org/colloquiaee" class="navigation-circle-list-col__point" onclick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-col__meta">
-              <h3 class="navigation-circle-list-col__title"> Electrical
-              </h3>
+              <p class="navigation-circle-list-col__title"> Electrical
+              </p>
             </div></a></li>
               </ul>
     </div>
@@ -379,13 +381,13 @@
       <ul class="navigation-circle__list">
         <li class="navigation-circle-list-lan"><a href="https://wissenaire.org/valorant" class="navigation-circle-list-lan__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-lan__meta">
-              <h3 class="navigation-circle-list-lan__title">Valorant
-              </h3>
+              <p class="navigation-circle-list-lan__title">Valorant
+              </p>
             </div></a></li>
         <li class="navigation-circle-list-lan"><a href="https://wissenaire.org/csgo" class="navigation-circle-list-lan__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-lan__meta">
-              <h3 class="navigation-circle-list-lan__title">CSGO
-              </h3>
+              <p class="navigation-circle-list-lan__title">CSGO
+              </p>
             </div></a></li>
       
       </ul>
@@ -430,42 +432,42 @@ Battle hard and be the last one standing!! </p></div>
       <ul class="navigation-circle__list">
         <li class="navigation-circle-list-garc"><a href="https://wissenaire.org/analogcircuitdesign" class="navigation-circle-list-garc__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-garc__meta">
-              <h3 class="navigation-circle-list-garc__title">Analog Circuit design
-              </h3>
+              <p class="navigation-circle-list-garc__title">Analog Circuit design
+              </p>
             </div></a></li>
         <li class="navigation-circle-list-garc"><a href="https://wissenaire.org/mathsolympiad" class="navigation-circle-list-garc__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-garc__meta">
-              <h3 class="navigation-circle-list-garc__title">Maths Olympaid
-              </h3>
+              <p class="navigation-circle-list-garc__title">Maths Olympaid
+              </p>
             </div></a></li>
        <!--  <li class="navigation-circle-list-garc"><a class="navigation-circle-list-garc__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-garc__meta">
-              <h3 class="navigation-circle-list-garc__title">Item #3
-              </h3>
+              <p class="navigation-circle-list-garc__title">Item #3
+              </p>
               <h4 class="navigation-circle-list-garc__subtitle">It just goes round and round</h4>
             </div></a></li>
         <li class="navigation-circle-list-garc"><a class="navigation-circle-list-garc__point" onclick="onClick(4)" onmouseenter="calculateOffset(4)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-garc__meta">
-              <h3 class="navigation-circle-list-garc__title">Item #4
-              </h3>
+              <p class="navigation-circle-list-garc__title">Item #4
+              </p>
               <h4 class="navigation-circle-list-garc__subtitle">It just goes round and round</h4>
             </div></a></li>
        <li class="navigation-circle-list-garc"><a class="navigation-circle-list-garc__point" onclick="onClick(5)" onmouseenter="calculateOffset(5)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-garc__meta">
-              <h3 class="navigation-circle-list-garc__title">Item #5
-              </h3>
+              <p class="navigation-circle-list-garc__title">Item #5
+              </p>
               <h4 class="navigation-circle-list-garc__subtitle">It just goes round and round</h4>
             </div></a></li>
         <li class="navigation-circle-list-garc"><a class="navigation-circle-list-garc__point" onclick="onClick(6)" onmouseenter="calculateOffset(6)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-garc__meta">
-              <h3 class="navigation-circle-list-garc__title">Item #6
-              </h3>
+              <p class="navigation-circle-list-garc__title">Item #6
+              </p>
               <h4 class="navigation-circle-list-garc__subtitle">It just goes round and round</h4>
             </div></a></li>
         <li class="navigation-circle-list-garc"><a  href ="https://wissenaire.org/"class="navigation-circle-list-garc__point" onclick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-garc__meta">
-              <h3 class="navigation-circle-list-garc__title">Item #7
-              </h3>
+              <p class="navigation-circle-list-garc__title">Item #7
+              </p>
               <h4 class="navigation-circle-list-garc__subtitle">It just goes round and round</h4>
             </div></a></li> -->
       </ul>
@@ -506,20 +508,20 @@ Battle hard and be the last one standing!! </p></div>
         
         <li class="navigation-circle-list-onet"><a href="https://wissenaire.org/sciencetoons" class="navigation-circle-list-onet__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-onet__meta">
-              <h3 class="navigation-circle-list-onet__title">Science Toons
-              </h3>
+              <p class="navigation-circle-list-onet__title">Science Toons
+              </p>
             </div></a></li>
         
         <li class="navigation-circle-list-onet"><a href="https://wissenaire.org/sherlock" class="navigation-circle-list-onet__point" onclick="onClick(5)" onmouseenter="calculateOffset(5)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-onet__meta">
-              <h3 class="navigation-circle-list-onet__title">Sherlock
-              </h3>
+              <p class="navigation-circle-list-onet__title">Sherlock
+              </p>
             </div></a></li>
         
         <li class="navigation-circle-list-onet"><a  href ="https://wissenaire.org/shutter"class="navigation-circle-list-onet__point" onclick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-onet__meta">
-              <h3 class="navigation-circle-list-onet__title">Shutter
-              </h3>
+              <p class="navigation-circle-list-onet__title">Shutter
+              </p>
             </div></a></li>
       </ul>
     </div>
@@ -559,22 +561,22 @@ Battle hard and be the last one standing!! </p></div>
         
         <li class="navigation-circle-list-exsu"><a class="navigation-circle-list-exsu__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-exsu__meta">
-              <h3 class="navigation-circle-list-exsu__title">Item #3
-              </h3>
+              <p class="navigation-circle-list-exsu__title">Item #3
+              </p>
               <h4 class="navigation-circle-list-exsu__subtitle">It just goes round and round</h4>
             </div></a></li>
         
         <li class="navigation-circle-list-exsu"><a class="navigation-circle-list-exsu__point" onclick="onClick(5)" onmouseenter="calculateOffset(5)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-exsu__meta">
-              <h3 class="navigation-circle-list-exsu__title">Item #5
-              </h3>
+              <p class="navigation-circle-list-exsu__title">Item #5
+              </p>
               <h4 class="navigation-circle-list-exsu__subtitle">It just goes round and round</h4>
             </div></a></li>
         
         <li class="navigation-circle-list-exsu"><a  href ="https://wissenaire.org/"class="navigation-circle-list-exsu__point" onclick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-exsu__meta">
-              <h3 class="navigation-circle-list-exsu__title">Item #7
-              </h3>
+              <p class="navigation-circle-list-exsu__title">Item #7
+              </p>
               <h4 class="navigation-circle-list-exsu__subtitle">It just goes round and round</h4>
             </div></a></li>
       </ul>-->
