--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,7 +80,7 @@
 						
 			  <h2 class="visually-hidden" id="block-butterfly-main-menu-menu">Main navigation</h2>
 			  <ul>
-				  <% if(participant.name) { %>
+				  <% if(participant) { %>
 				<li class="open">
 					<i class="icofont-ui-user"></i><br><br><a href="/profile">My Profile</a>
 				  </li>
