--- a/views/aiml.ejs
+++ b/views/aiml.ejs
@@ -188,7 +188,7 @@
 			<div class="col-12 col-md-6" style="height: 0px;" ></div>
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
-					<% console.log(participant);
+					<!-- <% console.log(participant);
 					 if (participant.wissid) { %>
 					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('artificial-intelligence-machine-learning-423031');">
 						Register
@@ -196,7 +196,7 @@
 					</button>
 					<noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript>
 					<script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
-					<% } else{ %>
+					<% } else{ %> -->
 						<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
 							Register
 							<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
@@ -220,7 +220,7 @@
 								});
 							}
 						</script>
-							<% } %>
+							<!-- <% } %> -->
 					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/AI&ML.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
