--- a/views/cyber.ejs
+++ b/views/cyber.ejs
@@ -190,7 +190,7 @@ presence of a cybersecurity threat.</p>
 			<div class="col-12 col-md-6" style="height: 0px;" ></div>
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
-					<% console.log(participant);
+					<!-- <% console.log(participant);
 					 if (participant.wissid) { %>
 					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('cyber-security-ethical-hacking-142304');">
 						Register
@@ -198,7 +198,7 @@ presence of a cybersecurity threat.</p>
 					</button>
 					<noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript>
 					<script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
-					<% } else{ %>
+					<% } else{ %> -->
 						<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
 							Register
 							<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
@@ -222,7 +222,7 @@ presence of a cybersecurity threat.</p>
 								});
 							}
 						</script>
-							<% } %>
+							<!-- <% } %> -->
 					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/Cyber Security & Ethical hacking.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
