--- a/views/aiml.ejs
+++ b/views/aiml.ejs
@@ -188,16 +188,14 @@
 			<div class="col-12 col-md-6" style="height: 0px;" ></div>
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
-					<!-- <% console.log(participant);
-					 if (participant.wissid) { %>
+					 
 					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('artificial-intelligence-machine-learning-423031');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
 					<noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript>
 					<script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
-					<% } else{ %> -->
-						<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
+						<!-- <button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
 							Register
 							<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 						</button>
@@ -219,8 +217,7 @@
 									}
 								});
 							}
-						</script>
-							<!-- <% } %> -->
+						</script> -->
 					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/AI&ML.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
