--- a/views/automob.ejs
+++ b/views/automob.ejs
@@ -188,16 +188,14 @@ practically working on it.</p>
 			<div class="col-12 col-md-6" style="height: 0px;" ></div>
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
-					<!-- <% console.log(participant);
-					 if (participant.wissid) { %>
+					 
 					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('automobiles-electric-vehicles-121432');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
 					<noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript>
 					<script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
-					<% } else{ %> -->
-						<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
+						<!-- <button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
 							Register
 							<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 						</button>
@@ -219,8 +217,8 @@ practically working on it.</p>
 									}
 								});
 							}
-						</script>
-							<!-- <% } %> -->
+						</script> -->
+
 					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/Automobiles & Electric Vehicles.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
