--- a/views/bridge.ejs
+++ b/views/bridge.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title> AI and ML | Wissenaire’21</title>
+	<title> Bridge Design | Wissenaire’21</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
