--- a/views/acd.ejs
+++ b/views/acd.ejs
@@ -186,7 +186,7 @@
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
 					
-					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('test-324102');">
+					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('analog-circuit-design-132014');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
