--- a/views/acd.ejs
+++ b/views/acd.ejs
@@ -139,7 +139,7 @@
 						<div class="col-12 col-md-6 d-flex justify-content-center align-self-center">
 							<div class="row">
 								<div class="col-12">
-									<h2 align="center" style="font-size: 1.6em; line-height:1.2;">Analog System Design</h2>
+									<h2 align="center" style="font-size: 1.6em; line-height:1.2;">Analog Circuit Design</h2>
 								</div><br><br>
 								
 							</div>							
