--- a/views/sciencetoons.ejs
+++ b/views/sciencetoons.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Pioneers Plan | Wissenaire’21</title>
+	<title>Science Toons | Wissenaire’21</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -226,7 +226,7 @@ CREATIVITY IS THE POWER OF HUMAN BEING ............USE IT WISELY.</p>
 							}
 						</script>
 							<% } %>
-					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/Pioneers Plan.pdf';">
+					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/Scientoons.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
