--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,7 +12,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   	<link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
-    <link href="./stylesheets/canvas.css" rel="stylesheet">
+    <!-- <link href="./stylesheets/canvas.css" rel="stylesheet"> -->
     <link href="./stylesheets/navbar.css" rel="stylesheet">
 	<link rel="icon" type="image/png"  href="./images/logo-mini.png" type="image/x-icon">
   <style>
@@ -228,7 +228,7 @@
     
       </section>
    
-  <script type="text/javascript" src="./javascripts/canvas.js"></script>  
+  <!-- <script type="text/javascript" src="./javascripts/canvas.js"></script>   -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
   <script src="./javascripts/jquery.min.js"></script>
 
