--- a/views/competitions.ejs
+++ b/views/competitions.ejs
@@ -174,7 +174,7 @@
      data-aos-duration="1000">
      <span class="yantrixdot">
 
-    <button  onclick="location.href = '';" class="knowmore">KNOW MORE</button>
+    <button  onclick="location.href = 'https://wissenaire.org/arduinohackathon';" class="knowmore">KNOW MORE</button>
      </span>
     <div class="navigation-circle__inner">
 
@@ -185,16 +185,16 @@
         <circle id="mask-circle" cx="160" cy="160" r="158" fill="none" stroke-width="4" stroke="#0d47a1" stroke-linecap="round" stroke-miterlimit="10" style="stroke-dasharray:1005.3088px;"></circle>
       </svg>
       <ul class="navigation-circle__list">
-        <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-yan"><a href='https://wissenaire.org/arduinohackathon' class="navigation-circle-list-yan__point" onclick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
               <p class="navigation-circle-list-yan__title">Arduino Hackathon
               </p>
              
              <!-- <h4 class="navigation-circle-list-yan__subtitle">It just goes round and round</h4>-->
             </div></a></li>
-        <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
+        <li class="navigation-circle-list-yan"><a href='https://wissenaire.org/cad' class="navigation-circle-list-yan__point" onclick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
             <div class="navigation-circle-list-yan__meta">
-              <p class="navigation-circle-list-yan__title">CAD Component
+              <p class="navigation-circle-list-yan__title">Robotics CAD
               </p>
             </div></a></li>
          <!--  <li class="navigation-circle-list-yan"><a class="navigation-circle-list-yan__point" onclick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
